# neow-insight

./: .gitignore  AGENTS.md  README.md  best-practices-python.md  best-practices-react.md  settings.toml.example
.opencode/agents/: python-best-practices.md  react-best-practices.md
backend/: README.md  pyproject.toml
backend/api/: main.py  schemas.py  state.py
backend/api/routers/: health.py  ingest.py  live.py  recommendation.py  runs.py  stats.py
backend/api/services/: analytics.py  live_card_recovery.py  live_context.py  live_recommendation.py  runs_history.py
backend/core/: config.py
backend/core/db/: __init__.py  models.py  session.py
backend/core/ingestion/: __init__.py  importer.py  parser.py  types.py
backend/core/llm/: __init__.py  client.py
backend/core/watcher/: __init__.py  watcher.py
backend/scripts/: api_dev.py  import_history.py  watch_history.py
backend/tests/: test_api.py  test_config.py  test_importer.py  test_parser.py  test_reset_settings_script.py  test_watcher.py
frontend/: README.md  biome.json  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/components/ui/: alert.tsx  badge.tsx  card.tsx
frontend/src/features/recommendation/: api.test.ts  api.ts  hooks.ts  recommendation-dashboard.test.tsx  recommendation-dashboard.tsx  types.ts  utils.ts
frontend/src/pages/: overview-page.tsx  recommendation-page.tsx  run-detail-page.tsx  runs-page.tsx
scripts/: dev.py  e2e.py  init_settings.py  process_utils.py  reset_settings.py  verify.py
